fixed the padding issue on mobile screen

--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
 }
 
 .main{
-    padding: 8% !important;
+    padding: 5% !important;
     max-width: 480px;
     margin: auto;
 }
